--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <main>
       <section class="projects">
         <div class="container">
-          <h2 class="projects__title">Наши проекты</h2>
+          <h1 class="projects__title">Наши проекты</h1>
 
           <div class="projects__grid">
             <ul class="projects__list">
               <li class="projects__item">
                 <img src="img/our-projects/projects-1.jpg" alt="Собачка в будке" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h3 class="projects__item-title">Новый дом для животных</h3>
+                  <h2 class="projects__item-title">Новый дом для животных</h2>
                   <p class="projects__item-description">
                     Приют появился практически одно<span class="two-hidden">временно с созданием </span
                     ><span class="one-hidden">Фонда в </span>...
@@ -37,7 +37,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-2.jpg" alt="Собачка в костюме" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h3 class="projects__item-title">Маленькие модники</h3>
+                  <h2 class="projects__item-title">Маленькие модники</h2>
                   <p class="projects__item-description">
                     Наши котики и собачки тоже лю<span class="two-hidden">бят наряжаться, чтобы красиво </span
                     ><span class="one-hidden">выглядеть </span>...
@@ -49,7 +49,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-3.jpg" alt="Девушка с собакой" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h3 class="projects__item-title">Поиграй со мной!</h3>
+                  <h2 class="projects__item-title">Поиграй со мной!</h2>
                   <p class="projects__item-description">
                     Новая программа нашего приюта <span class="two-hidden"> “Поиграй со мной”. Приводите </span
                     ><span class="one-hidden">своих </span>...
@@ -61,7 +61,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-4.jpg" alt="Собака облизывается" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h3 class="projects__item-title">Конкурс “Лучшее фото”</h3>
+                  <h2 class="projects__item-title">Конкурс “Лучшее фото”</h2>
                   <p class="projects__item-description">
                     Приходи к нам в Friendly House и<span class="two-hidden"> делай классные фотографии</span>
                     <span class="one-hidden">наших животн</span>...
@@ -72,15 +72,15 @@
             </ul>
 
             <div class="projects__right">
-              <div class="projects__wrapper">
+              <article class="projects__wrapper">
                 <div class="projects__wrapper-wrap">
-                  <h3 class="projects__wrapper-title">Собака лучший друг человека, или.... собаки?</h3>
+                  <h2 class="projects__wrapper-title">Собака лучший друг человека, или.... собаки?</h2>
                   <a href="#" class="projects__wrapper-link">Подробнее</a>
                 </div>
-              </div>
+              </article>
 
               <div class="projects__more">
-                <h4 class="projects__more-title">Больше проектов</h4>
+                <h3 class="projects__more-title">Больше проектов</h3>
 
                 <ul class="projects__more-list">
                   <li class="projects__more-item">
@@ -167,147 +167,51 @@
         <div class="container">
           <h2 class="pets__title">Наши питомцы</h2>
 
-          <div class="pets__grid">
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image01.jpg" alt="Твинки и Пинки" />
-              <figcaption class="pets__figcaption">Твинки и Пинки, 2 месяца</figcaption>
-            </figure>
+          <ul class="pets__grid">
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image01.jpg" alt="Твинки и Пинки" />
+                <figcaption class="pets__figcaption">Твинки и Пинки, 2 месяца</figcaption>
+              </figure>
+            </li>
 
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image02.jpg" alt="Мурзик" />
-              <figcaption class="pets__figcaption">Мурзик, 6 месяцев</figcaption>
-            </figure>
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image02.jpg" alt="Мурзик" />
+                <figcaption class="pets__figcaption">Мурзик, 6 месяцев</figcaption>
+              </figure>
+            </li>
 
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image03.jpg" alt="Миша (кот) и Ричард (пёс)" />
-              <figcaption class="pets__figcaption">Миша (кот) и Ричард (пёс), 3 года и 5 лет</figcaption>
-            </figure>
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image03.jpg" alt="Миша (кот) и Ричард (пёс)" />
+                <figcaption class="pets__figcaption">Миша (кот) и Ричард (пёс), 3 года и 5 лет</figcaption>
+              </figure>
+            </li>
 
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image04.jpg" alt="Джек" />
-              <figcaption class="pets__figcaption">Джек, 1 год</figcaption>
-            </figure>
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image04.jpg" alt="Джек" />
+                <figcaption class="pets__figcaption">Джек, 1 год</figcaption>
+              </figure>
+            </li>
 
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image05.jpg" alt="Джерри" />
-              <figcaption class="pets__figcaption">Джерри, 3 недели</figcaption>
-            </figure>
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image05.jpg" alt="Джерри" />
+                <figcaption class="pets__figcaption">Джерри, 3 недели</figcaption>
+              </figure>
+            </li>
 
-            <figure class="pets__figure">
-              <img class="pets__img" src="img/pets/image06.jpg" alt="Рокки и Сеня" />
-              <figcaption class="pets__figcaption">Рокки и Сеня, 2 и 3 года</figcaption>
-            </figure>
-          </div>
+            <li class="pets__item">
+              <figure class="pets__figure">
+                <img class="pets__img" src="img/pets/image06.jpg" alt="Рокки и Сеня" />
+                <figcaption class="pets__figcaption">Рокки и Сеня, 2 и 3 года</figcaption>
+              </figure>
+            </li>
+          </ul>
         </div>
       </section>
-
-      <!-- <section class="about">
-        <div class="container">
-          <h2 class="about__title">О приюте</h2>
-
-          <p class="about__description about__description_one">
-            Приют "Friendly House" - это целый комплекс для бездомных и брошенных животных.
-          </p>
-
-          <p class="about__description about__description_two">
-            В приюте работает сплочённая команда, которая занимается помощью бездомным животным в&nbsp;течении многих
-            лет. Мы заботимся о качестве жизни наших подопечных и осуществляем профессиональный медицинский уход.
-          </p>
-        </div>
-      </section>
-
-      <section class="help">
-        <div class="container">
-          <h2 class="help__title">Как ты можешь нам помочь?</h2>
-
-          <div class="help__wrapper">
-            <ul class="help__list">
-              <li class="help__item one">
-                <h3 class="help__subtitle">Финансово</h3>
-
-                <p class="help__text help__text_one">
-                  Мы будем рады любым пожертвованиям. Деньги пойдут на корм, лечение и уход, а&nbsp;также, на
-                  обустройство территории, где обитают наши маленькие питомцы.
-                </p>
-              </li>
-              <li class="help__item two">
-                <h3 class="help__subtitle help__subtitle_two">Стать волонером</h3>
-
-                <p class="help__text help__text_two">
-                  Наш приют "Friendly House" привлекает волонтеров для оказания помощи в самых разных форматах! От
-                  финансовой помощи и набирающего популярность интеллектуального волонтерства до помощи руками.
-                </p>
-
-                <p class="help__text help__text_two">
-                  Нам всегда нужна помощь с выгулом подопечных, уборкой помещений, привезти в приют корм или
-                  медикаменты, помочь с перевозкой животных в клиники, забрать и привезти вещи и&nbsp;много всего
-                  другого. Мы всегда рады любой помощи, присоединяйтесь к нашей дружной команде! :)
-                </p>
-              </li>
-              <li class="help__item three">
-                <h3 class="help__subtitle">Стать опекуном</h3>
-
-                <p class="help__text help__text_three help__text_bold">
-                  Хотите друга, но не можете взять домой? Проект опеки - идеальное решение!
-                </p>
-
-                <p class="help__text help__text_three">
-                  Взять под опеку животное, у которого еще нет опекуна, – это как завести питомца, о котором всю жизнь
-                  мечтал, но не мог себе этого позволить по&nbsp;каким-либо причинам.
-                </p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <section class="feedback">
-        <div class="container">
-          <div class="feedback__wrapper">
-            <h2 class="feedback__title">Ты можешь помочь нам!</h2>
-
-            <p class="feedback__text">Хочешь забрать питомца, стать волонтером, или опекуном?</p>
-            <p class="feedback__text feedback__text_orange">Свяжись с нами!</p>
-
-            <address class="contacts">
-              <ul class="contacts__list">
-                <li class="contacts__item contacts__item_phone">
-                  <a class="contacts__link" href="tel:88493003957" aria-label="Ссылка на номер телефона"
-                    >8 (849) 300 - 39 -57</a
-                  >
-                </li>
-
-                <li class="contacts__item contacts__item_mail">
-                  <a
-                    class="contacts__link"
-                    href="mailto:FriendlyHouse@gmail.com"
-                    aria-label="Ссылка на электронную почту"
-                    >FriendlyHouse@gmail.com</a
-                  >
-                </li>
-              </ul>
-            </address>
-
-            <p class="feedback__text feedback__text_bottom">Или оставь свои контакты и мы сами свяжемся с тобой!</p>
-
-            <form class="form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
-              <fieldset class="form__fieldset">
-                <label class="form__label">
-                  Номер телефона
-                  <input class="form__input" type="tel" inputmode="tel" name="phone" />
-                </label>
-
-                <label class="form__label">
-                  E-mail
-                  <input class="form__input" type="email" inputmode="email" name="mail" />
-                </label>
-              </fieldset>
-
-              <button class="form__button" type="submit">Отправить</button>
-            </form>
-          </div>
-        </div>
-      </section> -->
     </main>
   </body>
 </html>
