Created section hero

--- a/index.html
+++ b/index.html
@@ -209,9 +209,27 @@
     </header>
 
     <main>
+      <section class="hero">
+        <div class="container hero__container">
+          <h1 class="visually-hidden">Friendly House - приют для животных</h1>
+
+          <!-- <div class="hero__wrapper"> -->
+          <!-- <div class="hero__description"> -->
+          <h2 class="hero__title">
+            <span class="hero__title-color">Сара ждёт,</span>
+            когда найдётся её человек
+          </h2>
+          <button class="button hero__button">Жми на лапку, чтобы помочь!</button>
+          <!-- </div> -->
+
+          <img class="hero__img" src="img/hero/banner01.png" alt="Картинка французский бульдог" width="580" />
+          <!-- </div> -->
+        </div>
+      </section>
+
       <section class="projects">
         <div class="container">
-          <h1 class="projects__title">Наши проекты</h1>
+          <h2 class="projects__title">Наши проекты</h2>
 
           <div class="projects__grid">
             <ul class="projects__list">
