Created section help and added adaptive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <!-- <div class="hero__wrapper"> -->
           <!-- <div class="hero__description"> -->
-          <h2 class="hero__title">
+          <h2 class="hero__title title">
             <span class="hero__title-color">Сара ждёт,</span>
             когда найдётся её человек
           </h2>
@@ -111,7 +111,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-1.jpg" alt="Собачка в будке" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h2 class="projects__item-title">Новый дом для животных</h2>
+                  <h2 class="projects__item-title subtitle">Новый дом для животных</h2>
                   <p class="projects__item-description text">
                     Приют появился практически одно<span class="two-hidden">временно с созданием </span
                     ><span class="one-hidden">Фонда в </span>...
@@ -123,7 +123,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-2.jpg" alt="Собачка в костюме" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h2 class="projects__item-title">Маленькие модники</h2>
+                  <h2 class="projects__item-title subtitle">Маленькие модники</h2>
                   <p class="projects__item-description text">
                     Наши котики и собачки тоже лю<span class="two-hidden">бят наряжаться, чтобы красиво </span
                     ><span class="one-hidden">выглядеть </span>...
@@ -135,7 +135,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-3.jpg" alt="Девушка с собакой" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h2 class="projects__item-title">Поиграй со мной!</h2>
+                  <h2 class="projects__item-title subtitle">Поиграй со мной!</h2>
                   <p class="projects__item-description text">
                     Новая программа нашего приюта <span class="two-hidden"> “Поиграй со мной”. Приводите </span
                     ><span class="one-hidden">своих </span>...
@@ -147,7 +147,7 @@
               <li class="projects__item">
                 <img src="img/our-projects/projects-4.jpg" alt="Собака облизывается" class="projects__img" />
                 <div class="projects__item-wrapper">
-                  <h2 class="projects__item-title">Конкурс “Лучшее фото”</h2>
+                  <h2 class="projects__item-title subtitle">Конкурс “Лучшее фото”</h2>
                   <p class="projects__item-description text">
                     Приходи к нам в Friendly House и<span class="two-hidden"> делай классные фотографии</span>
                     <span class="one-hidden">наших животн</span>...
@@ -246,6 +246,85 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="help">
+        <div class="container">
+          <h2 class="title help__title">Как ты можешь нам помочь?</h2>
+
+          <!-- <div class="help__wrapper"> -->
+          <ol class="help__list">
+            <li class="help__item one">
+              <div class="help__item-content">
+                <h3 class="help__subtitle subtitle">Финансово</h3>
+
+                <p class="help__text help__text_one text">
+                  Мы&nbsp;будем рады любым пожертвованиям. Деньги пойдут на&nbsp;корм, лечение и&nbsp;уход,
+                  а&nbsp;также, на&nbsp;обустройство территории, где&nbsp;обитают наши маленькие питомцы.
+                </p>
+              </div>
+
+              <div class="help__slider-block">
+                <div class="help__image-slider">
+                  <div class="help__image-wrapper">
+                    <div class="help__image help__image-01"></div>
+                    <div class="help__image help__image-02"></div>
+                    <div class="help__image help__image-03"></div>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="help__item two">
+              <h3 class="help__subtitle subtitle help__subtitle_two">Стать волонером</h3>
+
+              <div class="help__content">
+                <img class="help__content-image" src="img/help/img201.jpg" alt="Девушка с собакой" />
+
+                <div class="help__item-wrapper">
+                  <p class="help__text help__text_two text">
+                    Наш приют "Friendly House" привлекает волонтеров для оказания помощи в&nbsp;самых разных форматах!
+                    От&nbsp;финансовой помощи и&nbsp;набирающего популярность интеллектуального волонтерства
+                    до&nbsp;помощи руками.
+                  </p>
+
+                  <p class="help__text help__text_two text">
+                    Нам всегда нужна помощь с&nbsp;выгулом подопечных, уборкой помещений, привезти в приют корм или
+                    медикаменты, помочь с перевозкой животных в клиники, забрать и привезти вещи и&nbsp;много всего
+                    другого. Мы всегда рады любой помощи, присоединяйтесь к нашей дружной команде! :)
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="help__item three">
+              <div class="help__item-content">
+                <h3 class="help__subtitle subtitle">Стать опекуном</h3>
+
+                <p class="help__text help__text_three help__text_bold">
+                  Хотите друга, но не можете взять домой? Проект опеки - идеальное решение!
+                </p>
+
+                <p class="help__text help__text_three text">
+                  Взять под опеку животное, у&nbsp;которого еще нет опекуна, – это как завести питомца, о&nbsp;котором
+                  всю жизнь мечтал, но не мог себе этого позволить по&nbsp;каким-либо причинам.
+                </p>
+              </div>
+
+              <div class="help__swiper-block">
+                <div class="help__slider">
+                  <div class="help__slider-wrapper">
+                    <div class="help__image help__slide-01"></div>
+                    <div class="help__image help__slide-02"></div>
+                    <div class="help__image help__slide-03"></div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ol>
+          <!-- </div> -->
+          <button class="button help__button">Жми на лапку, чтобы помочь!</button>
         </div>
       </section>
 
