--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,8 @@
             <li class="hero__item hero__item-active" data-bg="img/hero/sara-bg.png" tabindex="0">
               <figure class="hero__figure">
                 <picture class="hero__picture">
-                  <source srcset="img/hero/sara.webp img/hero/sara@2x.webp 2x" type="image/webp" />
-                  <source srcset="img/hero/sara.avif img/hero/sara@2x.avif 2x" type="image/avif" />
+                  <source srcset="img/hero/sara.webp, img/hero/sara@2x.webp 2x" type="image/webp" />
+                  <source srcset="img/hero/sara.avif, img/hero/sara@2x.avif 2x" type="image/avif" />
                   <img
                     class="hero__figure-img"
                     src="img/hero/sara.png"
@@ -107,8 +107,8 @@
             <li class="hero__item" data-bg="img/hero/boris-bg.png" aria-label="Борис" tabindex="0">
               <figure class="hero__figure">
                 <picture class="hero__picture">
-                  <source srcset="img/hero/boris.webp img/hero/boris@2x.webp 2x" type="image/webp" />
-                  <source srcset="img/hero/boris.avif img/hero/boris@2x.avif 2x" type="image/avif" />
+                  <source srcset="img/hero/boris.webp, img/hero/boris@2x.webp 2x" type="image/webp" />
+                  <source srcset="img/hero/boris.avif, img/hero/boris@2x.avif 2x" type="image/avif" />
                   <img
                     class="hero__figure-img"
                     src="img/hero/boris.png"
@@ -127,8 +127,8 @@
             <li class="hero__item" data-bg="img/hero/lui-bg.png" tabindex="0">
               <figure class="hero__figure">
                 <picture class="hero__picture">
-                  <source srcset="img/hero/lui.webp img/hero/lui@2x.webp 2x" type="image/webp" />
-                  <source srcset="img/hero/lui.avif img/hero/lui@2x.avif 2x" type="image/avif" />
+                  <source srcset="img/hero/lui.webp, img/hero/lui@2x.webp 2x" type="image/webp" />
+                  <source srcset="img/hero/lui.avif, img/hero/lui@2x.avif 2x" type="image/avif" />
                   <img
                     class="hero__figure-img"
                     src="img/hero/lui.png"
@@ -147,8 +147,8 @@
             <li class="hero__item" data-bg="img/hero/piter-bg.png" tabindex="0">
               <figure class="hero__figure">
                 <picture class="hero__picture">
-                  <source srcset="img/hero/piter.webp img/hero/piter@2x.webp 2x" type="image/webp" />
-                  <source srcset="img/hero/piter.avif img/hero/piter@2x.avif 2x" type="image/avif" />
+                  <source srcset="img/hero/piter.webp, img/hero/piter@2x.webp 2x" type="image/webp" />
+                  <source srcset="img/hero/piter.avif, img/hero/piter@2x.avif 2x" type="image/avif" />
                   <img
                     class="hero__figure-img"
                     src="img/hero/piter.png"
@@ -167,8 +167,8 @@
             <li class="hero__item" data-bg="img/hero/kenny-bg.png" tabindex="0">
               <figure class="hero__figure">
                 <picture class="hero__picture">
-                  <source srcset="img/hero/kenny.webp img/hero/kenny@2x.webp 2x" type="image/webp" />
-                  <source srcset="img/hero/kenny.avif img/hero/kenny@2x.avif 2x" type="image/avif" />
+                  <source srcset="img/hero/kenny.webp, img/hero/kenny@2x.webp 2x" type="image/webp" />
+                  <source srcset="img/hero/kenny.avif, img/hero/kenny@2x.avif 2x" type="image/avif" />
                   <img
                     class="hero__figure-img"
                     src="img/hero/kenny.png"
